# f1ops

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yaml  index.html  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: render-notebooks.yml
data/calendars/: f1_calendar_2010.csv  f1_calendar_2011.csv  f1_calendar_2012.csv  f1_calendar_2013.csv  f1_calendar_2014.csv  f1_calendar_2015.csv  f1_calendar_2016.csv  f1_calendar_2017.csv  f1_calendar_2018.csv  f1_calendar_2019.csv  f1_calendar_2020.csv
data/geo/: circuits_europe.csv
data/samples/: f1_teams.csv
notebooks/: 01_data_ingestion.html  01_data_ingestion.ipynb  02_route_estimation.html  02_route_estimation.ipynb  03_cost_emissions.html  03_cost_emissions.ipynb  04_optimization.html  04_optimization.ipynb  05_visualization.html  05_visualization.ipynb  06_time_series_forecasting.html  06_time_series_forecasting.ipynb
scripts/: bootstrap_data.py  create_sample_data.py  execute_notebooks.py  run_osrm_example.py  update_notebooks.py
src/f1ops/: __init__.py  app.py  config.py  cost.py  data_loader.py  data_models.py  emissions.py  forecast.py  geo.py  optimize.py  viz.py
tests/: __init__.py  test_core.py  test_data_loader.py
